Kubernetes/knowhow-helm/knowhow-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"knowhow-ingress","namespace":"uat-knowhow"},"spec":{"ingressClassName":"azure-application-gateway","rules":[{"http":{"paths":[{"backend":{"service":{"name":"ui-knowhow","port":{"number":443}}},"path":"/","pathType":"Exact"}]}}]}}
  creationTimestamp: "2023-12-04T14:09:58Z"
  generation: 1
  name: {{ .Values.ingressname }}
  namespace: {{ .Values.namespace }}
  resourceVersion: "1615533"
  uid: 43340b28-1d5b-43c3-b2c9-4e6ab437e18e
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ui-knowhow
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: {{ .Values.appgatewayip }}
